--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,8 @@
 		<module>entities</module>
 		<module>interfaces</module>
 		<module>bitfinex</module>
-	</modules>
+        <module>persistencia</module>
+    </modules>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
