--- a/entities/pom.xml
+++ b/entities/pom.xml
@@ -6,6 +6,13 @@
     <groupId>com.example</groupId>
     <artifactId>entities</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>jakarta.persistence</groupId>
+            <artifactId>jakarta.persistence-api</artifactId>
+            <version>2.2.3</version>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
