--- a/interfaces/pom.xml
+++ b/interfaces/pom.xml
@@ -24,6 +24,12 @@
             <version>5.3.7</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-commons</artifactId>
+            <version>2.5.1</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <properties>
