--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
 		<module>interfaces</module>
 		<module>bitfinex</module>
         <module>persistencia</module>
+        <module>batches</module>
     </modules>
 
 	<parent>
@@ -30,13 +31,8 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-batch</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.mariadb.jdbc</groupId>
 			<artifactId>mariadb-java-client</artifactId>
