Creating database tables and inserting, but not onetomany linked yet

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 		<module>bitfinex</module>
         <module>persistencia</module>
         <module>batches</module>
+        <module>baskets</module>
     </modules>
 
 	<parent>
