Save spot movido a módulo bitfinex

--- a/bitfinex/src/main/resources/application.properties
+++ b/bitfinex/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+spring.datasource.url=jdbc:mariadb://host.docker.internal:3306/pluto
+spring.datasource.username=root
+spring.datasource.password=toor
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
