--- a/bitfinex/pom.xml
+++ b/bitfinex/pom.xml
@@ -17,6 +17,25 @@
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.example</groupId>
+            <artifactId>entities</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.data</groupId>-->
+<!--            <artifactId>spring-data-jpa</artifactId>-->
+<!--            <version>2.5.1</version>-->
+<!--        </dependency>-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
+        </dependency>
     </dependencies>
 
     <properties>
@@ -24,15 +43,15 @@
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
-    <!--build>
-        <plugins>
-            <plugin>
-                <groupId>com.example</groupId>
-                <artifactId>pluto</artifactId>
-                <version>0.0.1-SNAPSHOT</version>
-            </plugin>
-        </plugins>
-        <finalName>bitfinex</finalName>
-    </build-->
+<!--    <build>-->
+<!--        <plugins>-->
+<!--            <plugin>-->
+<!--                <groupId>com.example</groupId>-->
+<!--                <artifactId>pluto</artifactId>-->
+<!--                <version>0.0.1-SNAPSHOT</version>-->
+<!--            </plugin>-->
+<!--        </plugins>-->
+<!--        <finalName>bitfinex</finalName>-->
+<!--    </build>-->
 
 </project>
