Authenticated against Bitfinex API

--- a/bitfinex/Dockerfile
+++ b/bitfinex/Dockerfile
@@ -2,5 +2,6 @@ FROM openjdk:12-alpine
 
 WORKDIR /app
 COPY ./target/bitfinex-*.jar ./bitfinex.jar
+COPY ../../sk .
 
 CMD ["java", "-jar", "/app/bitfinex.jar"]
