Using environment variables for keys location

--- a/bitfinex/Dockerfile
+++ b/bitfinex/Dockerfile
@@ -3,4 +3,6 @@ FROM openjdk:12-alpine
 WORKDIR /app
 COPY ./target/bitfinex-*.jar ./bitfinex.jar
 
+ENV API_KEYSTORE /ssh/
+
 CMD ["java", "-jar", "/app/bitfinex.jar"]
