--- a/batches/src/main/resources/application.properties
+++ b/batches/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 bitfinex.component.basepath=http://localhost:48558/bitfinex/spot/
 persistence.component.basepath=http://localhost:48557/persistence
+pluto.acting.threshold=0.05
