--- a/bitfinex/src/main/resources/application.properties
+++ b/bitfinex/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialec
 hibernate.dialect.storage_engine=innodb
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.open-in-view=false
+pluto.acting.threshold=0.05
