--- a/bitfinex/src/main/resources/application.properties
+++ b/bitfinex/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.open-in-view=false
 
 pluto.acting.threshold=0.05
+server.port=48558
