--- a/ordenanza/pom.xml
+++ b/ordenanza/pom.xml
@@ -5,22 +5,16 @@
     <parent>
         <artifactId>pluto</artifactId>
         <groupId>com.example</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>ordenanza</artifactId>
     <dependencies>
-
-
-
-
-
-
         <dependency>
             <groupId>com.example</groupId>
             <artifactId>entities</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>1.0.0</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
