--- a/bitfinex/src/main/resources/application.properties
+++ b/bitfinex/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mariadb://host.docker.internal:3306/pluto
+spring.datasource.url=jdbc:mariadb://localhost:3306/pluto
 spring.datasource.username=root
 spring.datasource.password=toor
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
